apps/20-media/hydrus-client/overlays/prod/http-redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hydrus-client-http-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
