apps/20-media/hydrus-client/overlays/prod/dataangel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydrus-client
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.dataangel: V-small
      annotations:
        dataangel.io/bucket: "vixens-prod-hydrus-client"
        dataangel.io/sqlite-paths: "/opt/hydrus/db/client.db,/opt/hydrus/db/client.mappings.db,/opt/hydrus/db/client.master.db,/opt/hydrus/db/client.caches.db"
        dataangel.io/fs-paths: "/opt/hydrus/db"
        dataangel.io/s3-endpoint: "http://nas.truxonline.com:30157"
        dataangel.io/deployment-name: "hydrus-client"
        dataangel.io/rclone-interval: "60s"
        dataangel.io/metrics-enabled: "true"
        dataangel.io/lock-enabled: "false"
    spec:
