apps/20-media/hydrus-client/overlays/prod/resources-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydrus-client
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.hydrus-client: small
        vixens.io/sizing.litestream: micro
