apps/20-media/hydrus-client/overlays/prod/ingress-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hydrus-client-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: hydrus-api.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hydrus-client
                port:
                  number: 45869
  tls:
    - hosts:
        - hydrus-api.truxonline.com
      secretName: hydrus-client-api-tls
